    [ticket:2046]

  - Fixed bug in query.options() whereby a path 
    applied to a lazyload using string keys could 
    overlap a same named attribute on the wrong 
    entity.  Note 0.7 has an updated version of this
    fix.  [ticket:2098]

  - Reworded the exception raised when a flush
    is attempted of a subclass that is not polymorphic
    against the supertype.  [ticket:2063]

- sql
  - Column.copy(), as used in table.tometadata(), copies the 
    'doc' attribute.  [ticket:2028]

  - Added some defs to the resultproxy.c extension so that
    the extension compiles and runs on Python 2.4.
    [ticket:2023]

  - The compiler extension now supports overriding the default
    compilation of expression._BindParamClause including that
    the auto-generated binds within the VALUES/SET clause
    of an insert()/update() statement will also use the new
    compilation rules. [ticket:2042]

  - Added accessors to ResultProxy "returns_rows", "is_insert"
    [ticket:2089]

  - The limit/offset keywords to select() as well
    as the value passed to select.limit()/offset()
    will be coerced to integer.  [ticket:2116]

- engine
  - Fixed bug in QueuePool, SingletonThreadPool whereby
    connections that were discarded via overflow or periodic
    cleanup() were not explicitly closed, leaving garbage 
    collection to the task instead.   This generally only
    affects non-reference-counting backends like Jython
    and Pypy.  Thanks to Jaimy Azle for spotting
    this.  [ticket:2102]

- postgresql
  - When explicit sequence execution derives the name 
    of the auto-generated sequence of a SERIAL column, 
    which currently only occurs if implicit_returning=False, 
    now accommodates if the table + column name is greater 
    than 63 characters using the same logic Postgresql uses.  
    [ticket:1083]

  - Added an additional libpq message to the list of "disconnect"
    exceptions, "could not receive data from server"
    [ticket:2044]
