@@ -49,6 +49,13 @@ CHANGES
     is attempted of a subclass that is not polymorphic
     against the supertype.  [ticket:2063]
 
+  - Some fixes to the state handling regarding 
+    backrefs, typically when autoflush=False, where
+    the back-referenced collection wouldn't 
+    properly handle add/removes with no net 
+    change.  Thanks to Richard Murri for the 
+    test case + patch.  [ticket:2123]
+
 - sql
   - Column.copy(), as used in table.tometadata(), copies the 
     'doc' attribute.  [ticket:2028]
